--- a/Assignment2/Assignment2.ipynb
+++ b/Assignment2/Assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "4  BONAVEN   VICTOR     2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "DiDegreeView({'ROMUL': 12, 'AMBROSE': 5, 'PETER': 8, 'ALBERT': 10, 'BONAVEN': 10, 'VICTOR': 7, 'ELIAS': 4, 'BERTH': 6, 'LOUIS': 4, 'GREG': 4, 'HUGH': 5, 'MARK': 5, 'JOHN': 5, 'WINF': 7, 'BASIL': 5, 'BONIFACE': 4, 'SIMP': 5, 'AMAND': 4})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,38 +165,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('ROMUL', 9)\n",
-      "('AMBROSE', 2)\n",
-      "('PETER', 5)\n",
-      "('ALBERT', 6)\n",
-      "('BONAVEN', 7)\n",
-      "('VICTOR', 4)\n",
-      "('ELIAS', 1)\n",
-      "('BERTH', 3)\n",
-      "('LOUIS', 1)\n",
-      "('GREG', 1)\n",
-      "('HUGH', 2)\n",
-      "('MARK', 2)\n",
-      "('JOHN', 2)\n",
-      "('WINF', 4)\n",
-      "('BASIL', 2)\n",
-      "('BONIFACE', 1)\n",
-      "('SIMP', 2)\n",
-      "('AMAND', 1)\n"
+      "ROMUL\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "indegree = ''\n",
     "for employee in indegreeview:\n",
-    "    print (employee)"
+    "    if indegree == '':\n",
+    "        indegree = employee\n",
+    "    else:\n",
+    "        if employee[1] > indegree[1]:\n",
+    "            indegree = employee\n",
+    "print (indegree[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outdegreeview = G_panda.out_degree()"
    ]
   },
   {
@@ -204,7 +201,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "outdegree = ''\n",
+    "for employee in outdegreeview:\n",
+    "    print(employee)\n",
+    "    if indegree == '':\n",
+    "        indegree = employee\n",
+    "    else:\n",
+    "        if employee[1] > indegree[1]:\n",
+    "            indegree = employee\n",
+    "print (indegree[0])"
+   ]
   }
  ],
  "metadata": {
