--- a/Assignment2/Assignment2.ipynb
+++ b/Assignment2/Assignment2.ipynb
@@ -198,20 +198,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('ROMUL', 3)\n",
+      "('AMBROSE', 3)\n",
+      "('PETER', 3)\n",
+      "('ALBERT', 4)\n",
+      "('BONAVEN', 3)\n",
+      "('VICTOR', 3)\n",
+      "('ELIAS', 3)\n",
+      "('BERTH', 3)\n",
+      "('LOUIS', 3)\n",
+      "('GREG', 3)\n",
+      "('HUGH', 3)\n",
+      "('MARK', 3)\n",
+      "('JOHN', 3)\n",
+      "('WINF', 3)\n",
+      "('BASIL', 3)\n",
+      "('BONIFACE', 3)\n",
+      "('SIMP', 3)\n",
+      "('AMAND', 3)\n",
+      "ROMUL\n"
+     ]
+    }
+   ],
    "source": [
     "outdegree = ''\n",
     "for employee in outdegreeview:\n",
     "    print(employee)\n",
-    "    if indegree == '':\n",
-    "        indegree = employee\n",
+    "    if outdegree == '':\n",
+    "        outdegree = employee\n",
     "    else:\n",
-    "        if employee[1] > indegree[1]:\n",
-    "            indegree = employee\n",
+    "        if employee[1] > outdegree[1]:\n",
+    "            outdegree = employee\n",
     "print (indegree[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
