--- a/Assignment2/Assignment2.ipynb
+++ b/Assignment2/Assignment2.ipynb
@@ -198,45 +198,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('ROMUL', 3)\n",
-      "('AMBROSE', 3)\n",
-      "('PETER', 3)\n",
-      "('ALBERT', 4)\n",
-      "('BONAVEN', 3)\n",
-      "('VICTOR', 3)\n",
-      "('ELIAS', 3)\n",
-      "('BERTH', 3)\n",
-      "('LOUIS', 3)\n",
-      "('GREG', 3)\n",
-      "('HUGH', 3)\n",
-      "('MARK', 3)\n",
-      "('JOHN', 3)\n",
-      "('WINF', 3)\n",
-      "('BASIL', 3)\n",
-      "('BONIFACE', 3)\n",
-      "('SIMP', 3)\n",
-      "('AMAND', 3)\n",
-      "ROMUL\n"
+      "ALBERT\n"
      ]
     }
    ],
    "source": [
     "outdegree = ''\n",
     "for employee in outdegreeview:\n",
-    "    print(employee)\n",
     "    if outdegree == '':\n",
     "        outdegree = employee\n",
     "    else:\n",
     "        if employee[1] > outdegree[1]:\n",
     "            outdegree = employee\n",
-    "print (indegree[0])"
+    "print (outdegree[0])"
    ]
   },
   {
