--- a/Assignment2/Assignment2.ipynb
+++ b/Assignment2/Assignment2.ipynb
@@ -156,11 +156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('ROMUL', 9), ('AMBROSE', 2), ('PETER', 5), ('ALBERT', 6), ('BONAVEN', 7), ('VICTOR', 4), ('ELIAS', 1), ('BERTH', 3), ('LOUIS', 1), ('GREG', 1), ('HUGH', 2), ('MARK', 2), ('JOHN', 2), ('WINF', 4), ('BASIL', 2), ('BONIFACE', 1), ('SIMP', 2), ('AMAND', 1)]\n"
+     ]
+    }
+   ],
    "source": [
-    "indegreeview = G_panda.in_degree()"
+    "indegreeview = G_panda.in_degree()\n",
+    "print(indegreeview)"
    ]
   },
   {
@@ -218,6 +227,39 @@
     "        if employee[1] > outdegree[1]:\n",
     "            outdegree = employee\n",
     "print (outdegree[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AMBROSE': 5, 'PETER': 13, 'ALBERT': 8, 'ROMUL': 21, 'VICTOR': 7, 'BONAVEN': 16, 'ELIAS': 1, 'LOUIS': 1, 'GREG': 2, 'BERTH': 9, 'HUGH': 3, 'MARK': 3, 'JOHN': 3, 'WINF': 6, 'BASIL': 4, 'SIMP': 4, 'BONIFACE': 2, 'AMAND': 2}\n",
+      "{'AMBROSE': 2.5, 'PETER': 2.6, 'ALBERT': 1.3333333333333333, 'ROMUL': 2.3333333333333335, 'VICTOR': 1.75, 'BONAVEN': 2.2857142857142856, 'ELIAS': 1.0, 'LOUIS': 1.0, 'GREG': 2.0, 'BERTH': 3.0, 'HUGH': 1.5, 'MARK': 1.5, 'JOHN': 1.5, 'WINF': 1.5, 'BASIL': 2.0, 'SIMP': 2.0, 'BONIFACE': 2.0, 'AMAND': 2.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "listOfAvgRates = {}\n",
+    "for index, row in df.iterrows():\n",
+    "    if row['To'] not in listOfAvgRates:\n",
+    "        listOfAvgRates[row['To']] = 0\n",
+    "    listOfAvgRates[row['To']] += row['Rate']\n",
+    "print(listOfAvgRates)\n",
+    "highestRated = ''\n",
+    "for employee in indegreeview:\n",
+    "    listOfAvgRates[employee[0]] /= employee[1]\n",
+    "    if highestRated == '':\n",
+    "        highestRated = employee[0]\n",
+    "    else:\n",
+    "        if listOfAvgRates[employee[0]] > highestRated:\n",
+    "            highestRated = employee[0]\n",
+    "print(listOfAvgRates)\n",
+    "print('Highest Rated eployee is"
    ]
   },
   {
