--- a/Assignment2/Assignment2.ipynb
+++ b/Assignment2/Assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "4  BONAVEN   VICTOR     2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "DiDegreeView({'ROMUL': 12, 'AMBROSE': 5, 'PETER': 8, 'ALBERT': 10, 'BONAVEN': 10, 'VICTOR': 7, 'ELIAS': 4, 'BERTH': 6, 'LOUIS': 4, 'GREG': 4, 'HUGH': 5, 'MARK': 5, 'JOHN': 5, 'WINF': 7, 'BASIL': 5, 'BONIFACE': 4, 'SIMP': 5, 'AMAND': 4})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -239,27 +239,31 @@
      "output_type": "stream",
      "text": [
       "{'AMBROSE': 5, 'PETER': 13, 'ALBERT': 8, 'ROMUL': 21, 'VICTOR': 7, 'BONAVEN': 16, 'ELIAS': 1, 'LOUIS': 1, 'GREG': 2, 'BERTH': 9, 'HUGH': 3, 'MARK': 3, 'JOHN': 3, 'WINF': 6, 'BASIL': 4, 'SIMP': 4, 'BONIFACE': 2, 'AMAND': 2}\n",
-      "{'AMBROSE': 2.5, 'PETER': 2.6, 'ALBERT': 1.3333333333333333, 'ROMUL': 2.3333333333333335, 'VICTOR': 1.75, 'BONAVEN': 2.2857142857142856, 'ELIAS': 1.0, 'LOUIS': 1.0, 'GREG': 2.0, 'BERTH': 3.0, 'HUGH': 1.5, 'MARK': 1.5, 'JOHN': 1.5, 'WINF': 1.5, 'BASIL': 2.0, 'SIMP': 2.0, 'BONIFACE': 2.0, 'AMAND': 2.0}\n"
+      "{'AMBROSE': 2.5, 'PETER': 2.6, 'ALBERT': 1.3333333333333333, 'ROMUL': 2.3333333333333335, 'VICTOR': 1.75, 'BONAVEN': 2.2857142857142856, 'ELIAS': 1.0, 'LOUIS': 1.0, 'GREG': 2.0, 'BERTH': 3.0, 'HUGH': 1.5, 'MARK': 1.5, 'JOHN': 1.5, 'WINF': 1.5, 'BASIL': 2.0, 'SIMP': 2.0, 'BONIFACE': 2.0, 'AMAND': 2.0}\n",
+      "\n",
+      "The highest rated employee is: BERTH\n"
      ]
     }
    ],
    "source": [
     "listOfAvgRates = {}\n",
+    "# loops \n",
     "for index, row in df.iterrows():\n",
     "    if row['To'] not in listOfAvgRates:\n",
     "        listOfAvgRates[row['To']] = 0\n",
     "    listOfAvgRates[row['To']] += row['Rate']\n",
     "print(listOfAvgRates)\n",
+    "\n",
     "highestRated = ''\n",
     "for employee in indegreeview:\n",
     "    listOfAvgRates[employee[0]] /= employee[1]\n",
     "    if highestRated == '':\n",
     "        highestRated = employee[0]\n",
     "    else:\n",
-    "        if listOfAvgRates[employee[0]] > highestRated:\n",
+    "        if listOfAvgRates[employee[0]] > listOfAvgRates[highestRated]:\n",
     "            highestRated = employee[0]\n",
     "print(listOfAvgRates)\n",
-    "print('Highest Rated eployee is"
+    "print('\\nThe highest rated employee is: ' + highestRated)"
    ]
   },
   {
