--- a/Assignment2/Assignment2.ipynb
+++ b/Assignment2/Assignment2.ipynb
@@ -226,12 +226,12 @@
     "    else:\n",
     "        if employee[1] > outdegree[1]:\n",
     "            outdegree = employee\n",
-    "print (outdegree[0])"
+    "print (The outdegree[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,9 @@
       "{'AMBROSE': 5, 'PETER': 13, 'ALBERT': 8, 'ROMUL': 21, 'VICTOR': 7, 'BONAVEN': 16, 'ELIAS': 1, 'LOUIS': 1, 'GREG': 2, 'BERTH': 9, 'HUGH': 3, 'MARK': 3, 'JOHN': 3, 'WINF': 6, 'BASIL': 4, 'SIMP': 4, 'BONIFACE': 2, 'AMAND': 2}\n",
       "{'AMBROSE': 2.5, 'PETER': 2.6, 'ALBERT': 1.3333333333333333, 'ROMUL': 2.3333333333333335, 'VICTOR': 1.75, 'BONAVEN': 2.2857142857142856, 'ELIAS': 1.0, 'LOUIS': 1.0, 'GREG': 2.0, 'BERTH': 3.0, 'HUGH': 1.5, 'MARK': 1.5, 'JOHN': 1.5, 'WINF': 1.5, 'BASIL': 2.0, 'SIMP': 2.0, 'BONIFACE': 2.0, 'AMAND': 2.0}\n",
       "\n",
-      "The highest rated employee is: BERTH\n"
+      "The highest rated employee is: BERTH\n",
+      "\n",
+      "The lowest rated employee is: ELIAS\n"
      ]
     }
    ],
@@ -255,15 +257,21 @@
     "print(listOfAvgRates)\n",
     "\n",
     "highestRated = ''\n",
+    "lowestRated = ''\n",
     "for employee in indegreeview:\n",
     "    listOfAvgRates[employee[0]] /= employee[1]\n",
     "    if highestRated == '':\n",
     "        highestRated = employee[0]\n",
+    "        lowestRated = employee[0]\n",
     "    else:\n",
     "        if listOfAvgRates[employee[0]] > listOfAvgRates[highestRated]:\n",
     "            highestRated = employee[0]\n",
+    "        if listOfAvgRates[employee[0]] < listOfAvgRates[lowestRated]:\n",
+    "            lowestRated = employee[0]\n",
+    "            \n",
     "print(listOfAvgRates)\n",
-    "print('\\nThe highest rated employee is: ' + highestRated)"
+    "print('\\nThe highest rated employee is: ' + highestRated)\n",
+    "print('\\nThe lowest rated employee is: ' + lowestRated)"
    ]
   },
   {
